# to_do_app

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
tests/: conftest.py  test_main.py
to_do_app/: app.py  lifecycle.py
to_do_app/api/: router.py
to_do_app/api/todo/: dtos.py  views.py
to_do_app/api/users/: dtos.py  views.py
to_do_app/db/: models.py
to_do_app/db/migrations/: env.py
to_do_app/db/migrations/versions/: 6f09e013ea11_add_column.py  92d0521a829f_todo.py  9c64cf644dd5_add_new_column.py  a055640bb0c7_fix_column.py  b27858b3a817_shared_add.py  c3c7f3035b01_users.py
to_do_app/dependencies/: dependencies.py
